@@ -1,0 +1,5 @@
+use strict;
+use warnings FATAL => 'all';
+
+# this test is invoked indirectly, via t/06-warnings.t
+use Test::Kwalitee tests => [ 'has_tests' ];
